# qpl

./: .buildinfo  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  third-party-programs.txt
examples/: CMakeLists.txt
examples/high-level-api/: CMakeLists.txt
examples/high-level-api/operation-chains/: decompression_merged_with_analytics_example.cpp  decompression_scan_select_example.cpp  set_membership_operation_chain_example.cpp
examples/high-level-api/simple-operations/: compression_example.cpp  compression_stream_example.cpp  copy_example.cpp  crc_example.cpp  deflate_block_example.cpp  expand_example.cpp  extract_example.cpp  find_unique_example.cpp  rle_burst_example.cpp  scan_example.cpp  scan_range_example.cpp  scan_with_numa_device_id_example.cpp  select_example.cpp  set_membership_example.cpp  zero_compression_example.cpp
examples/high-level-api/utils/: scan_with_custom_allocator_example.cpp  stack_allocator.hpp
examples/low-level-api/: CMakeLists.txt  canned_mode_example.cpp  canned_mode_with_data_example.cpp  canned_mode_with_dictionary_example.cpp  compression_example.cpp  compression_multi_chunk_example.cpp  compression_static_multi_chunk_example.cpp  compression_with_dictionary_example.cpp  copy_example.cpp  crc64_cross_socket_example.cpp  crc64_example.cpp  decompression_output_overflow_example.cpp  examples_utils.hpp  expand_example.cpp  expand_with_force_array_output_mod_example.cpp  extract_example.cpp  find_unique_example.cpp  huffman_only_example.c  mix_paths_comp_decomp_w_dict_example.cpp  rle_burst_example.cpp  scan_example.cpp  scan_for_elements_in_range_example.cpp  scan_for_specific_value_example.cpp  scan_for_unique_value_example.cpp  scan_range_example.cpp  select_example.cpp  serialization_example.cpp  set_membership_example.cpp  zero_compression_example.cpp
sources/: CMakeLists.txt
sources/c_api/: CMakeLists.txt  job.hpp  job_execution_api.cpp  job_initialization_api.cpp  own_checkers.h  own_defs.h  utils_api.cpp
sources/c_api/compression_operations/: arguments_check.hpp  bit_writer.c  bit_writer.h  canned_utility.cpp  canned_utility.h  compression_state_t.h  compressor.cpp  compressor.hpp  decompressor.cpp  deflate_utils.cpp  dictionary.cpp  huffman_table.cpp  huffman_table.hpp  isal_statistics.c  isal_statistics.h  own_deflate.h  own_deflate_job.c  own_deflate_job.h  qpl_deflate_slow.c  statistics.cpp  zero_compressor.cpp  zero_compressor.hpp
sources/c_api/filter_operations/: analytics_state_t.h  arguments_check.hpp  expand_job.cpp  extract_job.cpp  filter_operations.hpp  find_unique_job.cpp  rle_burst_job.cpp  scan_job.cpp  select_job.cpp  set_membership_job.cpp
sources/c_api/legacy_hw_path/: async_hw_api.h  hardware_defs.h  hardware_state.h  own_ml_buffer_api.hpp  own_ml_submit_operation_api.hpp  qpl_hw_check_job.cpp  qpl_hw_compress_job.cpp  qpl_hw_get_size.c  qpl_hw_inflate_job.cpp  qpl_hw_submit_job.cpp
sources/c_api/other_operations/: arguments_check.hpp  copy.cpp  copy.hpp  crc64.cpp  crc64.hpp
sources/c_api/serialization/: huffman_table_serialization.cpp  huffman_table_serialization.hpp
sources/core-iaa/: CMakeLists.txt
sources/core-iaa/include/: core_deflate_api.h  hw_accelerator_api.h  hw_aecs_api.h  hw_completion_record_api.h  hw_configuration_driver.h  hw_definitions.h  hw_descriptors_api.h  hw_devices.h  hw_iaa_flags.h  hw_status.h  libaccel_config.h
sources/core-iaa/sources/: bit_rev.c
sources/core-sw/: CMakeLists.txt
sources/core-sw/dispatcher/: dispatcher.cpp  dispatcher.hpp  simple_memory_ops.hpp  simple_memory_ops_c_bind.cpp  simple_memory_ops_c_bind.h
sources/core-sw/include/: qplc_aggregates.h  qplc_api.h  qplc_checksum.h  qplc_compression.h  qplc_compression_consts.h  qplc_defines.h  qplc_deflate_defs.h  qplc_deflate_utils.h  qplc_expand.h  qplc_extract.h  qplc_find_unique.h  qplc_huffman_table.h  qplc_memop.h  qplc_pack.h  qplc_rle_burst.h  qplc_scan.h  qplc_select.h  qplc_set_membership.h  qplc_unpack.h  qplc_zero_compression.h
sources/cpp_api/: CMakeLists.txt
sources/cpp_api/operations/: common_operation.cpp
sources/cpp_api/results/: deflate_histogram.cpp  huffman_table.cpp  inflate_stream.cpp
sources/cpp_api/util/: compression_utils.cpp  deflate_block_utils.cpp  exceptions.cpp  qpl_service_functions_wrapper.cpp  status_handler.cpp
sources/isal/: CMakeLists.txt  LICENSE
sources/isal/crc/: crc32_gzip_refl_by16_10.asm  crc32_gzip_refl_by8.asm  crc32_gzip_refl_by8_02.asm  crc32_ieee_01.asm  crc32_ieee_02.asm  crc32_ieee_by16_10.asm  crc32_ieee_by4.asm  crc32_iscsi_00.asm  crc32_iscsi_01.asm  crc32_iscsi_by16_10.asm  crc64_base.c  crc_base.c  crc_multibinary.asm
sources/isal/igzip/: adler32_avx2_4.asm  adler32_base.c  igzip.c  (+41 more)
sources/middle-layer/: CMakeLists.txt
tools/: CMakeLists.txt
tools/benchmarks/: CMakeLists.txt
tools/configs/: 1n1d1e1w-s-n1.conf  1n1d1e1w-s-n2.conf  1n1d8e1w-s-n1.conf  1n1d8e1w-s-n2.conf  1n2d8e1w-s-n1.conf  1n2d8e1w-s-n2.conf  1n3d8e1w-s-n1.conf  1n3d8e1w-s-n2.conf  1n4d1e1w-s-n1.conf  1n4d1e1w-s-n2.conf  1n4d8e1w-s-n1.conf  1n4d8e1w-s-n2.conf  2n1d1e1w-s.conf  2n1d8e1w-s.conf  2n2d8e1w-s.conf  2n3d8e1w-s.conf  2n4d8e1w-s.conf
tools/pkg-config/: CMakeLists.txt  qpl.pc.in
tools/ref/: CMakeLists.txt  ref_bit_rev.c  ref_checksums.c  ref_convert.c  ref_copy.c  ref_count.c  ref_crc32.c  ref_crc64.c  ref_expand.c  ref_expand_rle.c  ref_extract.c  ref_find_unique.c  ref_own_copy.c  ref_own_min_max_sum.c  ref_own_scan.c  ref_scan.c  ref_select.c  ref_set_membership.c  ref_store.c  ref_xor_checksum.c  ref_zero_compress_16u.c  ref_zero_compress_32u.c  ref_zero_decompress_16u.c  ref_zero_decompress_32u.c
tools/scripts/: accel_conf.py  accel_conf.sh
tools/testdata/: file1  file10  file11  file12  file13  file14  file16  file17  file18  file19  file2  file3  file4  file5  file6  file7  file8  file9  gen_all_ll.def  gen_large_dist.def
tools/tests/: CMakeLists.txt
tools/utils/: CMakeLists.txt
(+1291 files in other folders)
