# ==========================================================================
# Copyright (C) 2022 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==========================================================================

project(examples VERSION 1.0 LANGUAGES C CXX)

add_subdirectory(high-level-api)
add_subdirectory(low-level-api)
