# ==========================================================================
# Copyright (C) 2022 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==========================================================================

cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
project(examples VERSION 1.0 LANGUAGES C CXX)

add_subdirectory(low-level-api)
